<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/op_result"
        android:layout_margin="24dp"
        android:textSize="64sp"
        android:paddingRight="24dp"
        android:paddingLeft="24dp"
        android:textAlignment="textEnd"
        />

    <EditText
        android:id="@+id/num1"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/num1"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:ems="10"
        android:hint="@string/num2"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textSize="20sp"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/btn_add_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_add_op"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_sub_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_sub_op"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_times_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_times_op"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_div_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_div_op"
        android:textSize="20sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/clear_btn"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/clear_btn"
        android:text="@string/btn_clear"
        android:textSize="20sp" />

</LinearLayout>